tests/Fixtures/Torture/Bad/field_as_method.g
// EXPECT G006
class C { int x; func f() { let y = self.x(); } }
kernel { entry func Main() { } }
